--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^1.9.1",
     "chalk": "^0.5.1",
     "mocha": "^1.20.1",
+    "request": "^2.39.0",
     "sync-prompt": "^0.4.1"
   },
   "devDependencies": {
